fixed signin alignment issue

--- a/src/views/Login/login.scss
+++ b/src/views/Login/login.scss
@@ -42,6 +42,10 @@
             left: 50%;
             transform: translate(-50%, 0);
             color: $error;
+            width: 200px;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
         }
     }
 }
